# list-installed-apps

./: Cargo.toml  README.md
examples/: get_apps.rs
src/: lib.rs  macos.rs  main.rs  prelude.rs  windows_impl.rs
