[package]
name = "list-installed-apps"
version = "0.1.1"
edition = "2021"

[dependencies]
normalize-path = "0.2"
windows = { version = "0.62.2", features = [
    "Win32_System_GroupPolicy",
    "Win32_System_Environment",
    "Win32_Foundation",
] }
serde = { version = "1", features = ["derive"] }
windows-registry = "0.6"
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
serde_json = "1"
